--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.xerial</groupId>
+                <artifactId>sqlite-jdbc</artifactId>
+                <version>3.46.1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
