--- a/.github/workflows/build-installers.yml
+++ b/.github/workflows/build-installers.yml
@@ -4,70 +4,74 @@ jobs:
   build-macos:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 19
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - name: Set up JDK 23
+        uses: actions/setup-java@v4
         with:
-          java-version: '19'
+          java-version: '23'
           distribution: 'temurin'
       - name: Build macOS Installer
         run: mvn clean package -Pjpackage-macos
       - name: Upload macOS Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: macos-installer
           path: target/jpackage/macos/*.dmg
+          if-no-files-found: error
   build-linux-deb:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 19
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - name: Set up JDK 23
+        uses: actions/setup-java@v4
         with:
-          java-version: '19'
+          java-version: '23'
           distribution: 'temurin'
       - name: Install Debian Tools
         run: sudo apt-get update && sudo apt-get install -y fakeroot dpkg-deb
       - name: Build Linux DEB Installer
         run: mvn clean package -Pjpackage-linux-deb
       - name: Upload Linux DEB Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: linux-deb-installer
           path: target/jpackage/linux-deb/*.deb
+          if-no-files-found: error
   build-linux-rpm:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 19
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - name: Set up JDK 23
+        uses: actions/setup-java@v4
         with:
-          java-version: '19'
+          java-version: '23'
           distribution: 'temurin'
       - name: Install RPM Tools
         run: sudo apt-get update && sudo apt-get install -y rpm
       - name: Build Linux RPM Installer
         run: mvn clean package -Pjpackage-linux-rpm
       - name: Upload Linux RPM Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: linux-rpm-installer
           path: target/jpackage/linux-rpm/*.rpm
+          if-no-files-found: error
   build-windows-msi:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 19
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - name: Set up JDK 23
+        uses: actions/setup-java@v4
         with:
-          java-version: '19'
+          java-version: '23'
           distribution: 'temurin'
       - name: Install WiX Toolset
         run: choco install wixtoolset --version 3.11.2
       - name: Build Windows MSI Installer
         run: mvn clean package -Pjpackage-windows-msi
       - name: Upload Windows MSI Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: windows-msi-installer
           path: target/jpackage/windows-msi/*.msi
+          if-no-files-found: error
