--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <app.main.class>org.example.downloader.Main</app.main.class>
         <app.name>downloader</app.name>
@@ -30,13 +30,7 @@
     </repositories>
 
     <dependencies>
-        <!-- Add dependencies here if needed, e.g.:
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>4.12.0</version>
-        </dependency>
-        -->
+        <!-- No dependencies needed; javax.smartcardio is in JDK -->
     </dependencies>
 
     <build>
@@ -47,8 +41,27 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
+                    <fork>true</fork>
+                    <executable>/Library/Java/JavaVirtualMachines/jdk-17.0.13+11/Contents/Home/bin/javac</executable>
+                </configuration>
+            </plugin>
+
+            <!-- Maven Exec Plugin for running the application -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>org.example.downloader.exp.SignDataWithSmartCard</mainClass>
                 </configuration>
             </plugin>
 
